--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     background-color: #e2e2e2;
     border-radius: 16px;
     border: 2px solid black;
-    margin-top: 64px;
+    margin-top: 128px;
 }
 
 #screen {
@@ -67,7 +67,8 @@ body {
     color: #F5F5F5;
 }
 
-.operator {
+.operator,
+#equals {
     background-color: #97275f;
 }
 
