--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     border: 2px solid black;
     border-radius: 8px;
     padding-right: 16px;
+    padding-left: 16px;
 }
 
 #top-display {
@@ -35,6 +36,8 @@ body {
     font-size: 42px;
     text-align: end;
     margin-top: 8px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 #spacer {
