--- a/style.css
+++ b/style.css
@@ -29,13 +29,12 @@ body {
     font-size: 24px;
     text-align: end;
     margin-top: 16px;
-    
 }
 
 #bottom-display {
-    font-size: 42px;
+    font-size: 56px; /*42px*/
     text-align: end;
-    margin-top: 8px;
+    margin-top: 36px; /*8px*/
     overflow: hidden;
     text-overflow: ellipsis;
 }
